--- a/description.html
+++ b/description.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Zvit 1</title>
+    <title>Description 1</title>
 </head>
 
 
@@ -27,7 +27,7 @@
     </section>
     <hr>
     <section class="sec-new">
-        <a href="description.html"><button class="format-1">Опис предметного середовища</button>  </a>
+        <a href="description.html"><button class="format-11">Опис предметного середовища</button>  </a>
         <p></p>
         <a href="topic.html"><button class="format-1">Тема, Мета, Місце розташування</button> </a>
         <p></p>
@@ -45,6 +45,7 @@
         <a href="conclusion.html"><button class="format-1">Висновки</button></a>
     </section>
       
+    <div class="desc"><img class="img" src="/Images/despription.png" alt="description"></div>
 
 
 
