--- a/image.html
+++ b/image.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Zvit 1</title>
+    <title>Image 1</title>
 </head>
 
 
@@ -29,22 +29,27 @@
     <section class="sec-new">
         <a href="description.html"><button class="format-1">Опис предметного середовища</button>  </a>
         <p></p>
-        <a href="topic.html"><button class="format-1">Тема, Мета, Місце розташування</button> </a>
+        <a href="thema.html"><button class="format-1">Тема, Мета, Місце розташування</button> </a>
         <p></p>
         <a href="structure.html"><button class="format-1">СТРУКТУРА ДОКУМЕНТА</button> </a>
         <p></p>
         <div>
-            <a href="table.html"><button class="format-2">HTML-код ТАБЛИЦЬ</button></a>
+            <a href="topic.html"><button class="format-2">HTML-код ТАБЛИЦЬ</button></a>
         <p></p>
         <a href="form.html"><button class="format-2">HTML-код ФОРМ</button></a>
         <p></p>
-        <a href="image.html"><button class="format-2">HTML-код ЗОБРАЖЕННЯ</button></a>
+        <a href="image.html"><button class="format-22">HTML-код ЗОБРАЖЕННЯ</button></a>
         <p></p>
         </div>
         
         <a href="conclusion.html"><button class="format-1">Висновки</button></a>
     </section>
       
+    <div class="desc">
+        <img class="img" src="/Images/image3.png" alt="description">
+        <p></p><img class="img" src="/Images/image1.png" alt="description">
+        <p></p><img  class="img" src="/Images/image2.png" alt="description">
+    </div>
 
 
 
