--- a/table.html
+++ b/table.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Zvit 1</title>
+    <title>Table 1</title>
 </head>
 
 
@@ -34,7 +34,7 @@
         <a href="structure.html"><button class="format-1">СТРУКТУРА ДОКУМЕНТА</button> </a>
         <p></p>
         <div>
-            <a href="table.html"><button class="format-2">HTML-код ТАБЛИЦЬ</button></a>
+            <a href="table.html"><button class="format-22">HTML-код ТАБЛИЦЬ</button></a>
         <p></p>
         <a href="form.html"><button class="format-2">HTML-код ФОРМ</button></a>
         <p></p>
@@ -45,6 +45,11 @@
         <a href="conclusion.html"><button class="format-1">Висновки</button></a>
     </section>
       
+    <div class="desc">
+        <img class="img" src="/Images/table3.png" alt="description">
+        <p></p><img class="img" src="/Images/table1.png" alt="description">
+        <img  class="img" src="/Images/table2.png" alt="description">
+    </div>
 
 
 
