--- a/conclusion.html
+++ b/conclusion.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Zvit 1</title>
+    <title>Conclusion 1</title>
 </head>
 
 
@@ -42,9 +42,12 @@
         <p></p>
         </div>
         
-        <a href="conclusion.html"><button class="format-1">Висновки</button></a>
+        <a href="conclusion.html"><button class="format-11">Висновки</button></a>
     </section>
       
+    <div class="desc">
+        <img  class="img" src="/Images/conclution.png" alt="description">
+    </div>
 
 
 
