--- a/form.html
+++ b/form.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Zvit 1</title>
+    <title>Form 1</title>
 </head>
 
 
@@ -36,7 +36,7 @@
         <div>
             <a href="table.html"><button class="format-2">HTML-код ТАБЛИЦЬ</button></a>
         <p></p>
-        <a href="form.html"><button class="format-2">HTML-код ФОРМ</button></a>
+        <a href="form.html"><button class="format-22">HTML-код ФОРМ</button></a>
         <p></p>
         <a href="image.html"><button class="format-2">HTML-код ЗОБРАЖЕННЯ</button></a>
         <p></p>
@@ -45,6 +45,11 @@
         <a href="conclusion.html"><button class="format-1">Висновки</button></a>
     </section>
       
+    <div class="desc">
+        <img class="img" src="/Images/form3.png" alt="description">
+        <p></p><img class="img" src="/Images/form1.png" alt="description">
+        <p></p><img  class="img" src="/Images/form2.png" alt="description">
+    </div>
 
 
 
