--- a/structure.html
+++ b/structure.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Zvit 1</title>
+    <title>Structure 1</title>
 </head>
 
 
@@ -31,7 +31,7 @@
         <p></p>
         <a href="topic.html"><button class="format-1">Тема, Мета, Місце розташування</button> </a>
         <p></p>
-        <a href="structure.html"><button class="format-1">СТРУКТУРА ДОКУМЕНТА</button> </a>
+        <a href="structure.html"><button class="format-11">СТРУКТУРА ДОКУМЕНТА</button> </a>
         <p></p>
         <div>
             <a href="table.html"><button class="format-2">HTML-код ТАБЛИЦЬ</button></a>
@@ -45,6 +45,11 @@
         <a href="conclusion.html"><button class="format-1">Висновки</button></a>
     </section>
       
+    <div class="desc">
+        <img  class="img" src="/Images/structure1.png" alt="description">
+        <img  class="img" src="/Images/structure2.png" alt="description">
+        <img  class="img" src="/Images/structure3.png" alt="description">
+    </div>
 
 
 
