--- a/topic.html
+++ b/topic.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Zvit 1</title>
+    <title>Topic 1</title>
 </head>
 
 
@@ -29,7 +29,7 @@
     <section class="sec-new">
         <a href="description.html"><button class="format-1">Опис предметного середовища</button>  </a>
         <p></p>
-        <a href="topic.html"><button class="format-1">Тема, Мета, Місце розташування</button> </a>
+        <a href="topic.html"><button class="format-11">Тема, Мета, Місце розташування</button> </a>
         <p></p>
         <a href="structure.html"><button class="format-1">СТРУКТУРА ДОКУМЕНТА</button> </a>
         <p></p>
@@ -45,6 +45,12 @@
         <a href="conclusion.html"><button class="format-1">Висновки</button></a>
     </section>
       
+    <div class="desc">
+        <img  class="img" src="/Images/thema.png" alt="description">
+        <p></p>
+      <a target="_blank" style="font-size: 25px; " href="https://veronikaslyvka.github.io/IC-33_Slyvka_Veronika_Lab1/">  Посилання на WEB-застосунок</a>
+        <p></p>    <a target="_blank" style="font-size: 25px;" href="https://veronikaslyvka.github.io/IC-33_Slyvka_Veronika_Zvit/">Посилання на звіт</a>
+    </div>
 
 
 
