--- a/conclusion.html
+++ b/conclusion.html
@@ -46,7 +46,7 @@
     </section>
       
     <div class="desc">
-        <img  class="img" src="/Images/conclution.png" alt="description">
+        <img  class="img" src="/Images/conclution.png" alt="photo">
     </div>
 
 
