--- a/table.html
+++ b/table.html
@@ -46,9 +46,9 @@
     </section>
       
     <div class="desc">
-        <img class="img" src="/Images/table3.png" alt="description">
-        <p></p><img class="img" src="/Images/table1.png" alt="description">
-        <img  class="img" src="/Images/table2.png" alt="description">
+        <img class="img" src="/Images/table3.png" alt="photo">
+        <p></p><img class="img" src="/Images/table1.png" alt="photo">
+        <img  class="img" src="/Images/table2.png" alt="photo">
     </div>
 
 
