--- a/description.html
+++ b/description.html
@@ -45,7 +45,7 @@
         <a href="conclusion.html"><button class="format-1">Висновки</button></a>
     </section>
       
-    <div class="desc"><img class="img" src="/Images/despription.png" alt="description"></div>
+    <div class="desc"><img class="img" src="/Images/despription.png" alt="photo"></div>
 
 
 
