--- a/form.html
+++ b/form.html
@@ -46,9 +46,9 @@
     </section>
       
     <div class="desc">
-        <img class="img" src="/Images/form3.png" alt="description">
-        <p></p><img class="img" src="/Images/form1.png" alt="description">
-        <p></p><img  class="img" src="/Images/form2.png" alt="description">
+        <img class="img" src="/Images/form3.png" alt="photo">
+        <p></p><img class="img" src="/Images/form1.png" alt="photo">
+        <p></p><img  class="img" src="/Images/form2.png" alt="photo">
     </div>
 
 
