--- a/image.html
+++ b/image.html
@@ -46,9 +46,9 @@
     </section>
       
     <div class="desc">
-        <img class="img" src="/Images/image3.png" alt="description">
-        <p></p><img class="img" src="/Images/image1.png" alt="description">
-        <p></p><img  class="img" src="/Images/image2.png" alt="description">
+        <img class="img" src="/Images/image3.png" alt="photo">
+        <p></p><img class="img" src="/Images/image1.png" alt="photo">
+        <p></p><img  class="img" src="/Images/image2.png" alt="photo">
     </div>
 
 
