--- a/structure.html
+++ b/structure.html
@@ -46,9 +46,9 @@
     </section>
       
     <div class="desc">
-        <img  class="img" src="/Images/structure1.png" alt="description">
-        <img  class="img" src="/Images/structure2.png" alt="description">
-        <img  class="img" src="/Images/structure3.png" alt="description">
+        <img  class="img" src="/Images/structure1.png" alt="photo">
+        <img  class="img" src="/Images/structure2.png" alt="photo">
+        <img  class="img" src="/Images/structure3.png" alt="photo">
     </div>
 
 
