--- a/topic.html
+++ b/topic.html
@@ -46,7 +46,7 @@
     </section>
       
     <div class="desc">
-        <img  class="img" src="/Images/thema.png" alt="photo">
+        <img  class="img" src="Images/thema.png" alt="photo">
         <p></p>
       <a target="_blank" style="font-size: 25px; " href="https://veronikaslyvka.github.io/IC-33_Slyvka_Veronika_Lab1/">  Посилання на WEB-застосунок</a>
         <p></p>    <a target="_blank" style="font-size: 25px;" href="https://veronikaslyvka.github.io/IC-33_Slyvka_Veronika_Zvit/">Посилання на звіт</a>
