--- a/description.html
+++ b/description.html
@@ -11,7 +11,7 @@
 <body>
     <h2><center>ЗВІТИ З ЛАБОРАТОРНИХ РОБІТ З ДИСЦИПЛІНИ "ІНТЕРНЕТ-ТЕХНОЛОГІЇ <br> та ПРОЄКТУВАННЯ WEB-ЗАСТОСУВАНЬ"</center></h2>
     <h3><center>Виконала студентка групи ІС-33 Сливка Вероніка</center></h3>
-    <div class="image-div"><img class="image" src="/Images/myPhoto.jpg" ></div>
+    <div class="image-div"><img class="image" src="Images/myPhoto.jpg" ></div>
 
     <hr>
     <section class="sec-but">
@@ -45,7 +45,7 @@
         <a href="conclusion.html"><button class="format-1">Висновки</button></a>
     </section>
       
-    <div class="desc"><img class="img" src="/Images/despription.png" alt="photo"></div>
+    <div class="desc"><img class="img" src="Images/despription.png" alt="photo"></div>
 
 
 
