--- a/image.html
+++ b/image.html
@@ -11,7 +11,7 @@
 <body>
     <h2><center>ЗВІТИ З ЛАБОРАТОРНИХ РОБІТ З ДИСЦИПЛІНИ "ІНТЕРНЕТ-ТЕХНОЛОГІЇ <br> та ПРОЄКТУВАННЯ WEB-ЗАСТОСУВАНЬ"</center></h2>
     <h3><center>Виконала студентка групи ІС-33 Сливка Вероніка</center></h3>
-    <div class="image-div"><img class="image" src="/Images/myPhoto.jpg" ></div>
+    <div class="image-div"><img class="image" src="Images/myPhoto.jpg" ></div>
 
     <hr>
     <section class="sec-but">
@@ -46,9 +46,9 @@
     </section>
       
     <div class="desc">
-        <img class="img" src="/Images/image3.png" alt="photo">
-        <p></p><img class="img" src="/Images/image1.png" alt="photo">
-        <p></p><img  class="img" src="/Images/image2.png" alt="photo">
+        <img class="img" src="Images/image3.png" alt="photo">
+        <p></p><img class="img" src="Images/image1.png" alt="photo">
+        <p></p><img  class="img" src="Images/image2.png" alt="photo">
     </div>
 
 
